# icfp2020-submission-system

./: .gitignore  Dockerfile  Readme.md  deploy.sh
.github/: dependabot.yml  rust.yml
submission-system/: Cargo.toml  repositories.ron  run.bat  run.sh
submission-system/src/: main.rs  style.css
