[package]
name = "submission-system"
version = "0.1.0"
authors = ["Skgland <bb-github@t-online.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.12.0"
actix-rt = "1.1.1"
actix-web = "2.0.0"
git2 = "0.13.16"
listenfd = "0.3.5"
ron = "0.7.0"
serde = {version = "1.0.114", features=["derive"]}
serde_json = "1.0.68"
tempdir = "0.3.7"

