[package]
name = "submission-system"
version = "0.1.0"
authors = ["Skgland <bb-github@t-online.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.12.0"
actix-rt = "2.4.0"
actix-web = "4.0.0-beta.10"
git2 = "0.14.2"
listenfd = "0.3.5"
ron = "0.7.0"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.69"
tempfile = "3.2.0"

