[package]
name = "submission-system"
version = "0.1.0"
authors = ["Skgland <bb-github@t-online.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
actix-rt = "2.7.0"
actix-web = "4.0.1"
git2 = "0.14.4"
listenfd = "1.0.0"
ron = "0.7.0"
serde = { version = "1.0.139", features = ["derive"] }
serde_json = "1.0.81"
tempfile = "3.3.0"

